--- a/cookie/package.json
+++ b/cookie/package.json
@@ -3,15 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "ejs": "~2.3.3",
-    "express": "~4.13.1",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "body-parser": "1.13.2",
+    "cookie-parser": "1.3.5",
+    "ejs": "2.3.3",
+    "express": "4.13.1",
+    "express-session": "1.11.3"
   }
 }
